7903775: Add LIBRARY.properties
Reviewed-by: jjg